# task-spooler-rs

./: .gitignore  Cargo.toml  build.rs  help.md
src/: cli.rs  ffi.rs  main.rs  process.rs  wrapper.rs
src/cli/: action.rs  opt.rs
src/process/: cancelable.rs  client.rs  job.rs  msg.rs  request.rs  server.rs
src/process/server/: env.rs  handle.rs  queue.rs
