[package]
name = "task-spooler-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name="tsp-rs"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
clap = { version = "4.5.28", features = ["cargo", "derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
uds = "0.4.2"
log = "0.4.25"
env_logger = "0.11.6"
users = "0.11.0"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-seqpacket = "0.8.0"


[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
cc = "1.2.12"
